--- a/_examples/java/project.json
+++ b/_examples/java/project.json
@@ -1,5 +1,8 @@
 {
   "name": "java",
   "description": "Java example project",
-  "role": "arn:aws:iam::293503197324:role/lambda"
+  "role": "arn:aws:iam::293503197324:role/lambda",
+  "environment": {
+    "LOGGLY_TOKEN": "some token"
+  }
 }
